# spruce

./: ANDROID_BUILD_COMPLETE.md  ANDROID_IMPLEMENTATION.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  MIGRATION_FROM_EXPO.md  OPTIMIZATION_REPORT.md  PROJECT_STATUS.md  README.md  SPRUCE_PLATFORM.md  TESTING_GUIDE.md
.cargo/: config.toml
android/: README.md  build.gradle  build_native.sh  gradle.properties  settings.gradle  test_build.sh
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/spruce/app/: MainActivity.kt
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/xml/: backup_rules.xml
cli/: Cargo.toml
cli/src/: main.rs  templates.rs
cli/src/commands/: create.rs  mod.rs
core/: Cargo.toml
core/src/: bridge.rs  lib.rs  platform.rs  rust_ui.rs  threading.rs
core/src/android/: input.rs  jni_bridge.rs  jni_interface.rs  lifecycle.rs  mod.rs  renderer.rs  surface.rs  tests.rs
core/src/sprucevm/: bridge_optimization.rs  bytecode.rs  compiler.rs  engine.rs  memory.rs  memory_safe.rs  mod.rs  optimizations.rs  property_access.rs  register_allocator.rs  runtime.rs  vapor_only.rs  vue36_complete.rs  vue36_vapor.rs  vue_parser.rs
docs/: MIGRATION_TO_RUST_UI.md  RUST_UI_ARCHITECTURE.md
examples/: rust_ui_performance.rs  vue_performance_test.js
examples/android-app/: local.properties
examples/demo-app/: README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
examples/demo-app/src/: App.vue  main.ts
runtime/: Cargo.toml  vue-renderer.ts
runtime/src/: lib.rs
scripts/: performance_test.sh
spruce_cli/: Cargo.toml
spruce_cli/src/: config.rs  main.rs  utils.rs
spruce_cli/src/commands/: ai.rs  build.rs  create.rs  deploy.rs  dev.rs  mod.rs
spruce_cli/src/templates/: mod.rs
