[workspace]
members = [
    "core",
    "runtime", 
    "cli",
    "spruce_cli"
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
crossbeam = "0.8"
parking_lot = "0.12"

# Native platform bindings
ndk = "0.8"
jni = "0.21"
objc = "0.2"
cocoa = "0.25"
core-foundation = "0.9"