[workspace]
members = [
    "core",
    "runtime", 
    "spruce_cli"
]
exclude = [
    # Don't build CLI for Android - only core library is needed
]
resolver = "2"

[workspace.dependencies]
# Core runtime
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "fs", "net", "process", "signal", "sync"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Concurrency
crossbeam = "0.8"
parking_lot = "0.12"

# Compression and serialization  
bincode = "1.3"
lz4_flex = "0.11"

# CLI dependencies (consolidated)
clap = { version = "4.4", features = ["derive", "color"] }
console = "0.15"
indicatif = "0.17"
dialoguer = "0.11"
tempfile = "3.8"
walkdir = "2.4"
ignore = "0.4"
glob = "0.3"
regex = "1.10"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
git2 = { version = "0.18", default-features = false, features = ["https"] }
colored = "2.0"

# Optional network
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

# Native platform bindings
ndk = "0.8"
jni = "0.21"
objc = "0.2"
cocoa = "0.25"
core-foundation = "0.9"
android_logger = "0.13"
log = "0.4"
base64 = "0.21"

# Graphics and UI
skia-safe = { version = "0.66" }
lyon = "1.0"

# Node.js integration
napi = { version = "2.16" }
napi-derive = { version = "2.16" }

# Development and testing
handlebars = "4.5"
assert_cmd = "2.0"
predicates = "3.0"
tempdir = "0.3"

# Profile optimizations
[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
debug = false
overflow-checks = false

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
incremental = true

# Fast development builds with some optimizations
[profile.dev-opt]
inherits = "dev"
opt-level = 1
debug = true
debug-assertions = true
overflow-checks = true

# Release with debug info for profiling
[profile.release-debug]
inherits = "release"
debug = true
strip = false

# Mobile-optimized release builds
[profile.mobile-release]
inherits = "release"
opt-level = "s"  # Optimize for size on mobile
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true