[package]
name = "spruce-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "spruce"
path = "src/main.rs"

[dependencies]
spruce-core = { path = "../core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
clap = { version = "4.4", features = ["derive"] }
colored = "2.0"
indicatif = "0.17"
dialoguer = "0.11"
walkdir = "2.4"

# Template engine
handlebars = "4.5"