[package]
name = "spruce-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "spruce"
path = "src/main.rs"

[dependencies]
spruce-core = { path = "../core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
clap = { workspace = true }
console = { workspace = true }
indicatif = { workspace = true }
dialoguer = { workspace = true }
walkdir = { workspace = true }
colored = { workspace = true }

# Template engine
handlebars = { workspace = true }