[package]
name = "spruce-core"
version = "0.1.0"
edition = "2021"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
crossbeam = { workspace = true }
parking_lot = { workspace = true }
bincode = { workspace = true }
lz4_flex = { workspace = true }

# UI and Graphics
skia-safe = { workspace = true, optional = true }
lyon = { workspace = true }

# Platform-specific - disable git2 on Android to avoid OpenSSL
[target.'cfg(target_os = "android")'.dependencies]
ndk = { workspace = true }
jni = { workspace = true }
android_logger = { workspace = true }
log = { workspace = true }
base64 = { workspace = true }

[target.'cfg(target_os = "ios")'.dependencies]
objc = { workspace = true }
cocoa = { workspace = true }
core-foundation = { workspace = true }

[features]
default = ["skia"]
skia = ["skia-safe"]
metal = []
vulkan = []