[package]
name = "spruce-platform-cli"
version = "1.0.0"
edition = "2021"
authors = ["Spruce Team <team@spruce.dev>"]
description = "Spruce CLI - Next-generation mobile development platform"
homepage = "https://spruce.dev"
repository = "https://github.com/spruce-platform/spruce"
license = "MIT"
keywords = ["mobile", "vue", "rust", "android", "ios"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "spruce"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true, optional = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
console = { workspace = true }
indicatif = { workspace = true }
dialoguer = { workspace = true }
tempfile = { workspace = true }
walkdir = { workspace = true }
ignore = { workspace = true }
glob = { workspace = true }
regex = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
toml = { workspace = true }
git2 = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempdir = { workspace = true }

[features]
default = []
telemetry = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]